# Trading-AI

./: .env.example  .env.t212.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AUDIT_CODE_ET_MODELES.md  CALENDRIER_IMPLEMENTATION.md  CHANGELOG.md  CODE_REVIEW.md  CONFIGURATION_TASK_SCHEDULER.md  COUNCIL_TEST_PROD.md  Code-Review.md  ELITEQUANT_RESOURCES.md  GEMINI.md  GEX_ANALYSIS.md  PLAN_EIA.md  PLAN_INTEGRATION_EIA.md  PROPOSITIONS_AMELIORATIONS.md  QWEN.md  RAPPORT_AUDIT_GLOBAL.md  RAPPORT_VALIDATION_CONTEXT7.md  README.md  README_SCHEDULER.md  STATUS_COMPLET.md  SYSTEM_SUMMARY.md  TODO.md  TRADING212_API_GUIDE.md  analyze_gex.py  audit_passage_prod_juin2026.md  audit_prod_logs.py  backtest_engine.py  backtest_prod.py  backtest_ziplime.py  backtest_ziplime_algo.py  clean_phantom_trades.py  debug_t212.py  fingpt_implementation_plan.md  fix_docstring.py  fix_lint.py  (+48 more)
.kilo/plans/: 1776259819018-sunny-tiger.md  (+14 more)
TradingAI-Lean/: README.md  TradingAIFrameworkAlgorithm.py  lean.ini  main.py
backtests/: fetch_data.py  filter_csv.py  run_zipline_backtest.py  test_zipline.py
data_cache/: QQQ_5y.parquet
docs/: ADR-001-think-mode-dual-layer-defence.md  ADR-002-decision-model-quality-audit.md  ADR-003-weekend-council-11th-voice.md  PLAN_DECISION_FIN_JUIN_2026.md  RAPPORT_RENTABILITE_ET_ROADMAP.md
i18n/: README_FR.md  README_ar.md  README_bn.md  README_es.md  README_fr.md  README_hi.md  README_id.md  README_pt.md  README_ru.md  README_zh.md
logs_prod/: audit_report.md  check_cache.py  check_db.py  morning_market_brief.md
memory-bank/: activeContext.md  changelog.md  contract.md  improvement_proposals.md  log.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
morning_brief/: morning_brief.py  requirements.txt
scripts/: backtest_ensemble_10y.py  backtest_hmm_10y.py
src/: adaptive_weight_manager.py  advanced_risk_manager.py  backtest.py  bootstrap.py  chart_generator.py  classic_model.py  config_weights.py  data.py  database.py  eia_client.py  enhanced_decision_engine.py  enhanced_trading_example.py  features.py  finacumen_main.py  gemini_gateway.py  gemini_quota.py  grebenkov_model.py  hmm_model.py  intelligent_scheduler.py  kronos_model.py  lean_bridge.py  lean_validator.py  llm_client.py  main.py  news_fetcher.py  oil_bench_model.py  performance_monitor.py  read_simul.py  scheduler.py  sentiment_analysis.py  t212_executor.py  tensortrade_model.py  timesfm_model.py  web_researcher.py  xai_explainer.py
tests/: backtest_llm_quality.py  bench_compare_llm.py  bench_finacumen.py  bench_helpers.py  bench_tensortrade.py  check_cache.py  check_db.py  check_live.py  check_llm_json.py  check_t212_positions.py  run_short_backtest.py  test_adaptive_weight_manager.py  test_advanced_risk_manager.py  test_bias_removal.py  test_chart_generator.py  test_classic_model.py  test_crawl4ai.py  test_database.py  test_db_fix.py  test_eia_client.py  test_enhanced_decision_engine.py  test_except_fix.py  test_features.py  test_file_locking.py  test_finacumen.py  test_full_cycle.py  test_gemini_gateway.py  test_grebenkov.py  test_hardcoded_prices.py  test_hmm_model.py  test_hyperliquid.py  test_kronos.py  test_llm_client.py  test_llm_prompts.py  test_oil_bench_model.py  test_prod_regression.py  test_sentiment_analysis.py  test_stop_loss.py  test_t212.py  test_tensortrade_integration.py  (+4 more)
web_dashboard/: README.md  app.py
(+32 files in other folders)
