[project]
name = "trading-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "huggingface-hub>=1.9.2",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0",
    "numpy>=1.26.4,<2.0",
    "pandas==2.2.3",
    "pandas-datareader>=0.10.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "shap>=0.45.0",
    "timesfm>=1.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "yfinance",
    "ddgs>=1.0.0",
    "hyperliquid-python-sdk>=0.22.0",
    "crawl4ai>=0.8.6",
    "tensortrade>=1.0.4",
    "stable-baselines3>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.uv.sources]
timesfm = { path = "vendor/timesfm" }
