[project]
name = "trading-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.8.6",
    "ddgs>=9.14.4",
    "einops>=0.8.2",
    "feedparser>=6.0.12",
    "free-llm-api-keys",
    "httpx>=0.28.1",
    "huggingface-hub>=1.17.0",
    "hyperliquid-python-sdk>=0.23.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "matplotlib>=3.10.9",
    "mplfinance>=0.12.10b0",
    "numpy>=1.26.4,<2.0",
    "openai>=2.44.0",
    "pandas==2.2.3",
    "pandas-datareader>=0.10.0",
    "pre-commit>=4.6.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "shap>=0.49.1",
    "smolagents[litellm]>=1.26.0",
    "stable-baselines3>=2.8.0",
    "tensortrade>=1.0.4",
    "timesfm>=2.0.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "yfinance>=1.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.uv.sources]
timesfm = { path = "vendor/timesfm" }
free-llm-api-keys = { workspace = true }

[tool.uv.workspace]
members = [
    "vendor/free-llm-api-keys-python",
]
